Syntax Analysis/y.output
Terminals unused in grammar

    MAIN
    ENDIF
    leftshift_assignment_operator
    rightshift_assignment_operator
    XOR_assignment_operator
    OR_assignment_operator
    AND_assignment_operator
    pipe_operator
    caret_operator
    leftshift_operator
    rightshift_operator
    SIZEOF
    tilde_operator


State 108 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration D

    3 D: declaration_list
    4  | ε

    5 declaration: variable_declaration
    6            | function_declaration
    7            | structure_definition
    8            | enum_declaration

    9 variable_declaration: type_specifier variable_declaration_list ';'
   10                     | storage_classes type_specifier variable_declaration_list ';'
   11                     | storage_classes CONST type_specifier variable_declaration_list ';'
   12                     | CONST type_specifier variable_declaration_list ';'
   13                     | structure_declaration

   14 storage_classes: AUTO
   15                | STATIC
   16                | REGISTER
   17                | EXTERN
   18                | VOLATILE
   19                | INLINE

   20 variable_declaration_list: variable_declaration_identifier V

   21 V: ',' variable_declaration_list
   22  | ε

   23 $@1: ε

   24 variable_declaration_identifier: identifier $@1 vdi

   25 vdi: identifier_array_type
   26    | assignment_operator expression

   27 identifier_array_type: '[' initilization_params
   28                      | ε

   29 initilization_params: integer_constant ']' identifier_array_type initilization
   30                     | ']' identifier_array_type string_initilization

   31 initilization: string_initilization
   32              | array_initialization
   33              | ε

   34 type_specifier: INT
   35               | CHAR
   36               | FLOAT
   37               | DOUBLE
   38               | star_specifier
   39               | LONG long_grammar
   40               | SHORT short_grammar
   41               | UNSIGNED unsigned_grammar
   42               | SIGNED signed_grammar
   43               | VOID

   44 star_specifier: INTs
   45               | CHARs
   46               | FLOATs
   47               | DOUBLEs

   48 unsigned_grammar: INT
   49                 | LONG long_grammar
   50                 | SHORT short_grammar
   51                 | ε

   52 signed_grammar: INT
   53               | LONG long_grammar
   54               | SHORT short_grammar
   55               | ε

   56 long_grammar: INT
   57             | ε

   58 short_grammar: INT
   59              | ε

   60 $@2: ε

   61 structure_definition: struct_or_union identifier $@2 '{' V1 '}' ';'

   62 V1: variable_declaration V1
   63   | ε

   64 structure_declaration: struct_or_union identifier variable_declaration_list

   65 struct_or_union: STRUCT
   66                | UNION

   67 function_declaration: function_declaration_type function_declaration_param_statement

   68 function_declaration_type: type_specifier identifier '('

   69 function_declaration_param_statement: params ')' statement

   70 params: parameters_list
   71       | ε

   72 parameters_list: type_specifier parameters_identifier_list

   73 parameters_identifier_list: param_identifier parameters_identifier_list_breakup

   74 parameters_identifier_list_breakup: ',' parameters_list
   75                                   | ε

   76 $@3: ε

   77 param_identifier: identifier $@3 param_identifier_breakup

   78 param_identifier_breakup: '[' ']'
   79                         | ε

   80 statement: expression_statment
   81          | compound_statement
   82          | conditional_statements
   83          | iterative_statements
   84          | return_statement
   85          | break_statement
   86          | variable_declaration
   87          | switch_case
   88          | printf_scanf_statements

   89 printf_scanf_statements: printf_statement ';'
   90                        | scanf_statement ';'

   91 printf_statement: PRINTF '(' printf_parameters ')'

   92 scanf_statement: SCANF '(' scanf_parameters ')'

   93 printf_parameters: printf_parameters ',' expression
   94                  | string_constant

   95 scanf_parameters: scanf_parameters ',' identifier
   96                 | scanf_parameters ',' amp_operator identifier
   97                 | string_constant

   98 compound_statement: '{' statment_list '}'

   99 statment_list: statement statment_list
  100              | ε

  101 expression_statment: expression ';'
  102                    | ';'

  103 conditional_statements: IF '(' simple_expression ')' statement conditional_statements_breakup

  104 conditional_statements_breakup: ELSE statement
  105                               | ε

  106 iterative_statements: WHILE '(' expression ')' statement
  107                     | FOR '(' variable_declaration_list ';' simple_expression ';' expression ')'
  108                     | FOR '(' type_specifier variable_declaration_list ';' simple_expression ';' expression ')'
  109                     | DO statement WHILE '(' simple_expression ')' ';'

  110 return_statement: RETURN return_statement_breakup

  111 return_statement_breakup: ';'
  112                         | expression ';'

  113 break_statement: BREAK ';'

  114 string_initilization: assignment_operator string_constant

  115 array_initialization: assignment_operator '{' array_int_declarations '}'

  116 array_int_declarations: integer_constant array_int_declarations_breakup

  117 array_int_declarations_breakup: ',' array_int_declarations
  118                               | ε

  119 expression: mutable expression_breakup
  120           | simple_expression
  121           | amp_operator identifier

  122 expression_breakup: assignment_operator expression
  123                   | addition_assignment_operator expression
  124                   | subtraction_assignment_operator expression
  125                   | multiplication_assignment_operator expression
  126                   | division_assignment_operator expression
  127                   | modulo_assignment_operator expression
  128                   | increment_operator
  129                   | decrement_operator

  130 simple_expression: and_expression simple_expression_breakup

  131 simple_expression_breakup: OR_operator and_expression simple_expression_breakup
  132                          | ε

  133 and_expression: unary_relation_expression and_expression_breakup

  134 and_expression_breakup: AND_operator unary_relation_expression and_expression_breakup
  135                       | ε

  136 unary_relation_expression: exclamation_operator unary_relation_expression
  137                          | regular_expression

  138 regular_expression: sum_expression regular_expression_breakup

  139 regular_expression_breakup: relational_operators sum_expression
  140                           | ε

  141 relational_operators: greaterthan_assignment_operator
  142                     | lessthan_assignment_operator
  143                     | greaterthan_operator
  144                     | lessthan_operator
  145                     | equality_operator
  146                     | inequality_operator

  147 sum_expression: sum_expression sum_operators term
  148               | term

  149 sum_operators: add_operator
  150              | subtract_operator

  151 term: term MULOP factor
  152     | factor

  153 MULOP: multiplication_operator
  154      | division_operator
  155      | modulo_operator

  156 factor: immutable
  157       | mutable

  158 mutable: identifier
  159        | mutable mutable_breakup

  160 mutable_breakup: '[' expression ']'
  161                | '.' identifier

  162 immutable: '(' expression ')'
  163          | call
  164          | constant

  165 call: identifier '(' arguments ')'

  166 arguments: arguments_list
  167          | ε

  168 arguments_list: expression A

  169 A: ',' expression A
  170  | ε

  171 constant: integer_constant
  172         | string_constant
  173         | float_constant
  174         | character_constant

  175 enum_declaration: ENUM identifier '{' enum_list '}' ';'

  176 enum_list: enumerator
  177          | enum_list ',' enumerator

  178 enumerator: identifier
  179           | identifier assignment_operator integer_constant

  180 switch_case: SWITCH '(' identifier ')' '{' case_list '}'

  181 case_list: case_entry BREAK ';'
  182          | case_list case_entry BREAK ';'

  183 case_entry: CASE constant ':' statement
  184           | CASE constant SPREAD constant ':' statement
  185           | DEFAULT ':' statement
  186           | ε


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 68 91 92 103 106 107 108 109 162 165 180
    ')' (41) 69 91 92 103 106 107 108 109 162 165 180
    ',' (44) 21 74 93 95 96 117 169 177
    '.' (46) 161
    ':' (58) 183 184 185
    ';' (59) 9 10 11 12 61 89 90 101 102 107 108 109 111 112 113 175 181 182
    '[' (91) 27 78 160
    ']' (93) 29 30 78 160
    '{' (123) 61 98 115 175 180
    '}' (125) 61 98 115 175 180
    error (256)
    IF (258) 103
    INT (259) 34 48 52 56 58
    CHAR (260) 35
    FLOAT (261) 36
    DOUBLE (262) 37
    LONG (263) 39 49 53
    SHORT (264) 40 50 54
    SIGNED (265) 42
    UNSIGNED (266) 41
    INTs (267) 44
    FLOATs (268) 46
    CHARs (269) 45
    DOUBLEs (270) 47
    CONST (271) 11 12
    STRUCT (272) 65
    ENUM (273) 175
    UNION (274) 66
    RETURN (275) 110
    MAIN (276)
    VOID (277) 43
    WHILE (278) 106 109
    FOR (279) 107 108
    DO (280) 109
    BREAK (281) 113 181 182
    ENDIF (282)
    SWITCH (283) 180
    CASE (284) 183 184
    DEFAULT (285) 185
    SPREAD (286) 184
    AUTO (287) 14
    STATIC (288) 15
    REGISTER (289) 16
    EXTERN (290) 17
    VOLATILE (291) 18
    INLINE (292) 19
    PRINTF (293) 91
    SCANF (294) 92
    identifier (295) 24 61 64 68 77 95 96 121 158 161 165 175 178 179 180
    integer_constant (296) 29 116 171 179
    string_constant (297) 94 97 114 172
    float_constant (298) 173
    character_constant (299) 174
    ELSE (300) 104
    leftshift_assignment_operator (301)
    rightshift_assignment_operator (302)
    XOR_assignment_operator (303)
    OR_assignment_operator (304)
    AND_assignment_operator (305)
    modulo_assignment_operator (306) 127
    multiplication_assignment_operator (307) 125
    division_assignment_operator (308) 126
    addition_assignment_operator (309) 123
    subtraction_assignment_operator (310) 124
    assignment_operator (311) 26 114 115 122 179
    OR_operator (312) 131
    AND_operator (313) 134
    pipe_operator (314)
    caret_operator (315)
    amp_operator (316) 96 121
    equality_operator (317) 145
    inequality_operator (318) 146
    lessthan_assignment_operator (319) 142
    lessthan_operator (320) 144
    greaterthan_assignment_operator (321) 141
    greaterthan_operator (322) 143
    leftshift_operator (323)
    rightshift_operator (324)
    add_operator (325) 149
    subtract_operator (326) 150
    multiplication_operator (327) 153
    division_operator (328) 154
    modulo_operator (329) 155
    SIZEOF (330)
    tilde_operator (331)
    exclamation_operator (332) 136
    increment_operator (333) 128
    decrement_operator (334) 129


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    program (91)
        on left: 1
        on right: 0
    declaration_list (92)
        on left: 2
        on right: 1 3
    D (93)
        on left: 3 4
        on right: 2
    declaration (94)
        on left: 5 6 7 8
        on right: 2
    variable_declaration (95)
        on left: 9 10 11 12 13
        on right: 5 62 86
    storage_classes (96)
        on left: 14 15 16 17 18 19
        on right: 10 11
    variable_declaration_list (97)
        on left: 20
        on right: 9 10 11 12 21 64 107 108
    V (98)
        on left: 21 22
        on right: 20
    variable_declaration_identifier (99)
        on left: 24
        on right: 20
    $@1 (100)
        on left: 23
        on right: 24
    vdi (101)
        on left: 25 26
        on right: 24
    identifier_array_type (102)
        on left: 27 28
        on right: 25 29 30
    initilization_params (103)
        on left: 29 30
        on right: 27
    initilization (104)
        on left: 31 32 33
        on right: 29
    type_specifier (105)
        on left: 34 35 36 37 38 39 40 41 42 43
        on right: 9 10 11 12 68 72 108
    star_specifier (106)
        on left: 44 45 46 47
        on right: 38
    unsigned_grammar (107)
        on left: 48 49 50 51
        on right: 41
    signed_grammar (108)
        on left: 52 53 54 55
        on right: 42
    long_grammar (109)
        on left: 56 57
        on right: 39 49 53
    short_grammar (110)
        on left: 58 59
        on right: 40 50 54
    structure_definition (111)
        on left: 61
        on right: 7
    $@2 (112)
        on left: 60
        on right: 61
    V1 (113)
        on left: 62 63
        on right: 61 62
    structure_declaration (114)
        on left: 64
        on right: 13
    struct_or_union (115)
        on left: 65 66
        on right: 61 64
    function_declaration (116)
        on left: 67
        on right: 6
    function_declaration_type (117)
        on left: 68
        on right: 67
    function_declaration_param_statement (118)
        on left: 69
        on right: 67
    params (119)
        on left: 70 71
        on right: 69
    parameters_list (120)
        on left: 72
        on right: 70 74
    parameters_identifier_list (121)
        on left: 73
        on right: 72
    parameters_identifier_list_breakup (122)
        on left: 74 75
        on right: 73
    param_identifier (123)
        on left: 77
        on right: 73
    $@3 (124)
        on left: 76
        on right: 77
    param_identifier_breakup (125)
        on left: 78 79
        on right: 77
    statement (126)
        on left: 80 81 82 83 84 85 86 87 88
        on right: 69 99 103 104 106 109 183 184 185
    printf_scanf_statements (127)
        on left: 89 90
        on right: 88
    printf_statement (128)
        on left: 91
        on right: 89
    scanf_statement (129)
        on left: 92
        on right: 90
    printf_parameters (130)
        on left: 93 94
        on right: 91 93
    scanf_parameters (131)
        on left: 95 96 97
        on right: 92 95 96
    compound_statement (132)
        on left: 98
        on right: 81
    statment_list (133)
        on left: 99 100
        on right: 98 99
    expression_statment (134)
        on left: 101 102
        on right: 80
    conditional_statements (135)
        on left: 103
        on right: 82
    conditional_statements_breakup (136)
        on left: 104 105
        on right: 103
    iterative_statements (137)
        on left: 106 107 108 109
        on right: 83
    return_statement (138)
        on left: 110
        on right: 84
    return_statement_breakup (139)
        on left: 111 112
        on right: 110
    break_statement (140)
        on left: 113
        on right: 85
    string_initilization (141)
        on left: 114
        on right: 30 31
    array_initialization (142)
        on left: 115
        on right: 32
    array_int_declarations (143)
        on left: 116
        on right: 115 117
    array_int_declarations_breakup (144)
        on left: 117 118
        on right: 116
    expression (145)
        on left: 119 120 121
        on right: 26 93 101 106 107 108 112 122 123 124 125 126 127 160 162 168 169
    expression_breakup (146)
        on left: 122 123 124 125 126 127 128 129
        on right: 119
    simple_expression (147)
        on left: 130
        on right: 103 107 108 109 120
    simple_expression_breakup (148)
        on left: 131 132
        on right: 130 131
    and_expression (149)
        on left: 133
        on right: 130 131
    and_expression_breakup (150)
        on left: 134 135
        on right: 133 134
    unary_relation_expression (151)
        on left: 136 137
        on right: 133 134 136
    regular_expression (152)
        on left: 138
        on right: 137
    regular_expression_breakup (153)
        on left: 139 140
        on right: 138
    relational_operators (154)
        on left: 141 142 143 144 145 146
        on right: 139
    sum_expression (155)
        on left: 147 148
        on right: 138 139 147
    sum_operators (156)
        on left: 149 150
        on right: 147
    term (157)
        on left: 151 152
        on right: 147 148 151
    MULOP (158)
        on left: 153 154 155
        on right: 151
    factor (159)
        on left: 156 157
        on right: 151 152
    mutable (160)
        on left: 158 159
        on right: 119 157 159
    mutable_breakup (161)
        on left: 160 161
        on right: 159
    immutable (162)
        on left: 162 163 164
        on right: 156
    call (163)
        on left: 165
        on right: 163
    arguments (164)
        on left: 166 167
        on right: 165
    arguments_list (165)
        on left: 168
        on right: 166
    A (166)
        on left: 169 170
        on right: 168 169
    constant (167)
        on left: 171 172 173 174
        on right: 164 183 184
    enum_declaration (168)
        on left: 175
        on right: 8
    enum_list (169)
        on left: 176 177
        on right: 175 177
    enumerator (170)
        on left: 178 179
        on right: 176 177
    switch_case (171)
        on left: 180
        on right: 87
    case_list (172)
        on left: 181 182
        on right: 180 182
    case_entry (173)
        on left: 183 184 185 186
        on right: 181 182


State 0

    0 $accept: • program $end

    INT       shift, and go to state 1
    CHAR      shift, and go to state 2
    FLOAT     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    LONG      shift, and go to state 5
    SHORT     shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    INTs      shift, and go to state 9
    FLOATs    shift, and go to state 10
    CHARs     shift, and go to state 11
    DOUBLEs   shift, and go to state 12
    CONST     shift, and go to state 13
    STRUCT    shift, and go to state 14
    ENUM      shift, and go to state 15
    UNION     shift, and go to state 16
    VOID      shift, and go to state 17
    AUTO      shift, and go to state 18
    STATIC    shift, and go to state 19
    REGISTER  shift, and go to state 20
    EXTERN    shift, and go to state 21
    VOLATILE  shift, and go to state 22
    INLINE    shift, and go to state 23

    program                    go to state 24
    declaration_list           go to state 25
    declaration                go to state 26
    variable_declaration       go to state 27
    storage_classes            go to state 28
    type_specifier             go to state 29
    star_specifier             go to state 30
    structure_definition       go to state 31
    structure_declaration      go to state 32
    struct_or_union            go to state 33
    function_declaration       go to state 34
    function_declaration_type  go to state 35
    enum_declaration           go to state 36


State 1

   34 type_specifier: INT •

    $default  reduce using rule 34 (type_specifier)


State 2

   35 type_specifier: CHAR •

    $default  reduce using rule 35 (type_specifier)


State 3

   36 type_specifier: FLOAT •

    $default  reduce using rule 36 (type_specifier)


State 4

   37 type_specifier: DOUBLE •

    $default  reduce using rule 37 (type_specifier)


State 5

   39 type_specifier: LONG • long_grammar

    INT  shift, and go to state 37

    $default  reduce using rule 57 (long_grammar)

    long_grammar  go to state 38


State 6

   40 type_specifier: SHORT • short_grammar

    INT  shift, and go to state 39

    $default  reduce using rule 59 (short_grammar)

    short_grammar  go to state 40


State 7

   42 type_specifier: SIGNED • signed_grammar

    INT    shift, and go to state 41
    LONG   shift, and go to state 42
    SHORT  shift, and go to state 43

    $default  reduce using rule 55 (signed_grammar)

    signed_grammar  go to state 44


State 8

   41 type_specifier: UNSIGNED • unsigned_grammar

    INT    shift, and go to state 45
    LONG   shift, and go to state 46
    SHORT  shift, and go to state 47

    $default  reduce using rule 51 (unsigned_grammar)

    unsigned_grammar  go to state 48


State 9

   44 star_specifier: INTs •

    $default  reduce using rule 44 (star_specifier)


State 10

   46 star_specifier: FLOATs •

    $default  reduce using rule 46 (star_specifier)


State 11

   45 star_specifier: CHARs •

    $default  reduce using rule 45 (star_specifier)


State 12

   47 star_specifier: DOUBLEs •

    $default  reduce using rule 47 (star_specifier)


State 13

   12 variable_declaration: CONST • type_specifier variable_declaration_list ';'

    INT       shift, and go to state 1
    CHAR      shift, and go to state 2
    FLOAT     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    LONG      shift, and go to state 5
    SHORT     shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    INTs      shift, and go to state 9
    FLOATs    shift, and go to state 10
    CHARs     shift, and go to state 11
    DOUBLEs   shift, and go to state 12
    VOID      shift, and go to state 17

    type_specifier  go to state 49
    star_specifier  go to state 30


State 14

   65 struct_or_union: STRUCT •

    $default  reduce using rule 65 (struct_or_union)


State 15

  175 enum_declaration: ENUM • identifier '{' enum_list '}' ';'

    identifier  shift, and go to state 50


State 16

   66 struct_or_union: UNION •

    $default  reduce using rule 66 (struct_or_union)


State 17

   43 type_specifier: VOID •

    $default  reduce using rule 43 (type_specifier)


State 18

   14 storage_classes: AUTO •

    $default  reduce using rule 14 (storage_classes)


State 19

   15 storage_classes: STATIC •

    $default  reduce using rule 15 (storage_classes)


State 20

   16 storage_classes: REGISTER •

    $default  reduce using rule 16 (storage_classes)


State 21

   17 storage_classes: EXTERN •

    $default  reduce using rule 17 (storage_classes)


State 22

   18 storage_classes: VOLATILE •

    $default  reduce using rule 18 (storage_classes)


State 23

   19 storage_classes: INLINE •

    $default  reduce using rule 19 (storage_classes)


State 24

    0 $accept: program • $end

    $end  shift, and go to state 51


State 25

    1 program: declaration_list •

    $default  reduce using rule 1 (program)


State 26

    2 declaration_list: declaration • D

    INT       shift, and go to state 1
    CHAR      shift, and go to state 2
    FLOAT     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    LONG      shift, and go to state 5
    SHORT     shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    INTs      shift, and go to state 9
    FLOATs    shift, and go to state 10
    CHARs     shift, and go to state 11
    DOUBLEs   shift, and go to state 12
    CONST     shift, and go to state 13
    STRUCT    shift, and go to state 14
    ENUM      shift, and go to state 15
    UNION     shift, and go to state 16
    VOID      shift, and go to state 17
    AUTO      shift, and go to state 18
    STATIC    shift, and go to state 19
    REGISTER  shift, and go to state 20
    EXTERN    shift, and go to state 21
    VOLATILE  shift, and go to state 22
    INLINE    shift, and go to state 23

    $default  reduce using rule 4 (D)

    declaration_list           go to state 52
    D                          go to state 53
    declaration                go to state 26
    variable_declaration       go to state 27
    storage_classes            go to state 28
    type_specifier             go to state 29
    star_specifier             go to state 30
    structure_definition       go to state 31
    structure_declaration      go to state 32
    struct_or_union            go to state 33
    function_declaration       go to state 34
    function_declaration_type  go to state 35
    enum_declaration           go to state 36


State 27

    5 declaration: variable_declaration •

    $default  reduce using rule 5 (declaration)


State 28

   10 variable_declaration: storage_classes • type_specifier variable_declaration_list ';'
   11                     | storage_classes • CONST type_specifier variable_declaration_list ';'

    INT       shift, and go to state 1
    CHAR      shift, and go to state 2
    FLOAT     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    LONG      shift, and go to state 5
    SHORT     shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    INTs      shift, and go to state 9
    FLOATs    shift, and go to state 10
    CHARs     shift, and go to state 11
    DOUBLEs   shift, and go to state 12
    CONST     shift, and go to state 54
    VOID      shift, and go to state 17

    type_specifier  go to state 55
    star_specifier  go to state 30


State 29

    9 variable_declaration: type_specifier • variable_declaration_list ';'
   68 function_declaration_type: type_specifier • identifier '('

    identifier  shift, and go to state 56

    variable_declaration_list        go to state 57
    variable_declaration_identifier  go to state 58


State 30

   38 type_specifier: star_specifier •

    $default  reduce using rule 38 (type_specifier)


State 31

    7 declaration: structure_definition •

    $default  reduce using rule 7 (declaration)


State 32

   13 variable_declaration: structure_declaration •

    $default  reduce using rule 13 (variable_declaration)


State 33

   61 structure_definition: struct_or_union • identifier $@2 '{' V1 '}' ';'
   64 structure_declaration: struct_or_union • identifier variable_declaration_list

    identifier  shift, and go to state 59


State 34

    6 declaration: function_declaration •

    $default  reduce using rule 6 (declaration)


State 35

   67 function_declaration: function_declaration_type • function_declaration_param_statement

    INT       shift, and go to state 1
    CHAR      shift, and go to state 2
    FLOAT     shift, and go to state 3
    DOUBLE    shift, and go to state 4
    LONG      shift, and go to state 5
    SHORT     shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    INTs      shift, and go to state 9
    FLOATs    shift, and go to state 10
    CHARs     shift, and go to state 11
    DOUBLEs   shift, and go to state 12
    VOID      shift, and go to state 17

    $default  reduce using rule 71 (params)

    type_specifier                        go to state 60
    star_specifier                        go to state 30
    function_declaration_param_statement  go to state 61
    params                                go to state 62
    parameters_list                       go to state 63


State 36

    8 declaration: enum_declaration •

    $default  reduce using rule 8 (declaration)


State 37

   56 long_grammar: INT •

    $default  reduce using rule 56 (long_grammar)


State 38

   39 type_specifier: LONG long_grammar •

    $default  reduce using rule 39 (type_specifier)


State 39

   58 short_grammar: INT •

    $default  reduce using rule 58 (short_grammar)


State 40

   40 type_specifier: SHORT short_grammar •

    $default  reduce using rule 40 (type_specifier)


State 41

   52 signed_grammar: INT •

    $default  reduce using rule 52 (signed_grammar)


State 42

   53 signed_grammar: LONG • long_grammar

    INT  shift, and go to state 37

    $default  reduce using rule 57 (long_grammar)

    long_grammar  go to state 64


State 43

   54 signed_grammar: SHORT • short_grammar

    INT  shift, and go to state 39

    $default  reduce using rule 59 (short_grammar)

    short_grammar  go to state 65


State 44

   42 type_specifier: SIGNED signed_grammar •

    $default  reduce using rule 42 (type_specifier)


State 45

   48 unsigned_grammar: INT •

    $default  reduce using rule 48 (unsigned_grammar)


State 46

   49 unsigned_grammar: LONG • long_grammar

    INT  shift, and go to state 37

    $default  reduce using rule 57 (long_grammar)

    long_grammar  go to state 66


State 47
